k8s/ssl/flare-ingress-no-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flare-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ethiodata.cc
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flare
                port:
                  number: 8000
