k8s/ssl/flare-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flare-ingress-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - ethiodata.cc
      secretName: flare-tls
  rules:
    - host: ethiodata.cc
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flare
                port:
                  number: 8000
